web-hosting-basics/subnet.tf
resource "aws_subnet" "private" {
  vpc_id     = aws_vpc.web_hosting_basics.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "private"
  }
}
resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.web_hosting_basics.id
  cidr_block = "10.0.2.0/24"
  map_public_ip_on_launch = true
  
  tags = {
    Name = "public"
  }
}
