web-hosting-basics/vpc.tf
resource "aws_vpc" "web_hosting_basics" {
  cidr_block       = "10.0.0.0/16"

  enable_dns_hostnames = true
  tags = {
    Name = "web_hosting_basics"
  }
}
